--- a/public/css/style_form.css
+++ b/public/css/style_form.css
@@ -1,7 +1,12 @@
 .form{
 width: 50%;
  margin: 0px auto;
+ padding-bottom: 50px;
+}
 
+#legenda-form{
+  text-align: center;
+  padding-top: 50px;
 }
 #exampleInputIdade{
   width: 80px;
