--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -1,5 +1,6 @@
 body{
   margin: 0px;
+  padding: 0px;
 }
 
 #topo{
@@ -8,38 +9,60 @@ body{
   color: green;
   font-size: 25px;
 }
-
+/*
 .con{
   width: 500px;
   margin: 0 auto;
   margin-bottom: 10px;
   margin-top: 30px;
   /*display: flex;*/
-}
+/*}*/
 .position{
   width: 500px;
-}
-h3{
+  margin: 0 auto;
+  margin-bottom: 10px;
+
+}/*
+h4{
   line-height: 35px;
   text-align: center;
+
 }
 p{
   line-height: 18px;
 }
-
+*/
 #size_img{
-  width: 130px;
-  height: 130px;
-
-
-
+  width: 200px;
+  height: 200px;
 }
-
+/*
 .space-img{
   margin-left: 16px;
 
 }
+*/
 hr{
   background-color: #d3e0e9;
-  height: 1px;
+  height: 5px;
+
+}
+@media (max-width:340px) {
+  .ss{
+    font-size: 10px;
+    max-width: 200px;
+  }
+  .position{
+    width: auto;
+  }
+  .list-group{
+    width: 280px;
+
+  }
+}
+@media(min-width:576px) and (max-width: 767px) {
+.ss{
+font-size: 10px;
+max-width: 200px;
+}
 }
