--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -47,7 +47,7 @@ hr{
   height: 5px;
 
 }
-@media (max-width:340px) {
+@media (max-width:400px) {
   .ss{
     font-size: 10px;
     max-width: 200px;
@@ -56,8 +56,16 @@ hr{
     width: auto;
   }
   .list-group{
-    width: 280px;
-
+    width: 270px;
+    margin: 0 auto;
+  }
+  .panel-heading{
+    text-align: center;
+  }
+  hr{
+    height: 1px;
+    width: 300px;
+    margin: 0 auto;
   }
 }
 @media(min-width:576px) and (max-width: 767px) {
