--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -42,15 +42,14 @@ p{
 
 }
 */
-hr{
-  background-color: #d3e0e9;
-  height: 5px;
 
-}
-@media (max-width:400px) {
-  .ss{
+
+
+/*@media (min-width: 200px) and (max: 575px) {
+  /*.ss{
     font-size: 10px;
     max-width: 200px;
+    color: green;
   }
   .position{
     width: auto;
@@ -61,16 +60,35 @@ hr{
   }
   .panel-heading{
     text-align: center;
-  }
-  hr{
-    height: 1px;
-    width: 300px;
-    margin: 0 auto;
-  }
-}
+  }*/
+
+/*}
 @media(min-width:576px) and (max-width: 767px) {
-.ss{
+/*.ss{
 font-size: 10px;
 max-width: 200px;
+color: red;
+}*/
+
+/*phone*/
+@media (max-width: @screen-xs-max) {
+  .ss{
+    color:pink;
+    font-size: 10px;
+  }
+ }
+ /*tablet*/
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+
+
+ }
+ /*descktop*/
+@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+
+
 }
-}
+/*grande*/
+@media (min-width: @screen-lg-min) {
+
+
+ }
