--- a/public/css/style_user_show.css
+++ b/public/css/style_user_show.css
@@ -7,9 +7,7 @@ body{
   width: 150px;
   height: 150px;
 }
- .alterar-a{
-   text-decoration: none;
- }
+
 
 
 
@@ -27,7 +25,7 @@ body{
 
 }
 
-@media screen and (max-width: 400px)  {
+@media screen and (max-width: 420px)  {
 h1{
 font-size: 25px;
 text-align: center;
@@ -39,6 +37,7 @@ text-align: center;
 }
 .well{
 display: flex;
+width: 96%;
 align-items: center;
 justify-content: center;
 }
@@ -47,5 +46,23 @@ justify-content: center;
   align-items: center;
   justify-content: center;
 }
+}
 
+@media screen and (max-width: 680px) and (min-width: 421px){
+h1{
+  font-size: 30px;
+  text-align: center;
+}
+.gravata-avatar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.well{
+display: flex;
+width: 96%;
+
+align-items: center;
+justify-content: center;
+}
 }
