--- a/public/css/style_navbar.css
+++ b/public/css/style_navbar.css
@@ -36,8 +36,9 @@ html, body{
   padding: 0;
 }
 .fixarRodape {
+  position: absolute;
         bottom: 0;
-        left: 0;       
+        left: 0;
 }
 .fa{
   margin: 10px;
