--- a/public/css/style_ad_show.css
+++ b/public/css/style_ad_show.css
@@ -7,6 +7,13 @@ img{
   height: 160px;
 }
 
+a:link{
+  text-decoration: none;
+}
+a{
+  color: rgb(51,51,51);
+}
+
 /**SmartPhone**/
 @media screen and (max-width: 420px){
   h1{
@@ -16,6 +23,9 @@ img{
   }
   h3{
     text-align: center;
+  }
+  p{
+    line-height: 1.5;
   }
 
   .img-pro{
