--- a/public/css/style_user_show.css
+++ b/public/css/style_user_show.css
@@ -7,10 +7,6 @@ body{
   width: 150px;
   height: 150px;
 }
-
-
-
-
 .well {
   width: 300px;
 
@@ -47,6 +43,9 @@ justify-content: center;
   align-items: center;
   justify-content: center;
 }
+.btn_messagem{
+  text-decoration: none;
+}
 }
 
 /**tablet**/
@@ -72,7 +71,4 @@ width: 100%;
 }
 /**desktop**/
 @media screen and (min-width: 771px){
-  h1{
-    color: red;
-  }
 }
