--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -2,12 +2,17 @@ body{
   margin: 0px;
   padding: 0px;
 }
+
+img{
+  width: 150px;
+  height: 150px;
+}
+
 @media screen and (max-width: 420px){
 
   .filtro-pesquisa{
     display: flex;
     width: 100%;
     justify-content: center;
-
   }
 }
