--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -10,9 +10,8 @@ img{
 
 @media screen and (max-width: 420px){
 
-  .filtro-pesquisa{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-  }
+.thumbnail{
+  background-color: red;
+
+}
 }
