--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -10,8 +10,14 @@ img{
 
 @media screen and (max-width: 420px){
 
-.thumbnail{
-  background-color: red;
-
+h4{
+  text-align: center;
 }
+a{
+  color:rgb(51,51,51);
+}
+.thumbnail{
+  border: 2px solid #636b6f;
+}
+
 }
