Erro de css encontrado e arrumado

--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -7,7 +7,8 @@ img{
   width: 150px;
   height: 150px;
 }
-
+}
+/**SmaerPhone**/
 @media screen and (max-width: 420px){
 
 h4{
@@ -20,4 +21,16 @@ a{
   border: 2px solid #636b6f;
 }
 
+}
+/**tablet**/
+@media screen and (max-width: 767px) and (min-width: 421px){
+  body{
+    background-color: blue;
+  }
+}
+/**desktop**/
+@media screen and (min-width: 769px){
+  body{
+    background-color: red;
+  }
 }
