--- a/public/css/style_ad_show.css
+++ b/public/css/style_ad_show.css
@@ -36,7 +36,7 @@ a{
   }
 }
 /**tablet**/
-@media screen and (max-width: 768px) and (min-width: 421px){
+@media screen and (max-width: 767px) and (min-width: 421px){
   h1{
     text-align: center;
     margin-bottom: 20px;
@@ -52,7 +52,8 @@ a{
   }
 }
 /** erro muito erro**/
-@media screen and (max-width: 928px) and (min-width: 770px){
+/**desktop**/
+@media screen and (min-width: 768px){
 h1{
   text-align:center;
   background-color:aqua;
