--- a/public/css/style_user_show.css
+++ b/public/css/style_user_show.css
@@ -71,4 +71,14 @@ width: 100%;
 }
 /**desktop**/
 @media screen and (min-width: 771px){
+  header, article{
+    margin-left: 10px;
+  }
+  img{
+    margin-top: 20px;
+  }
+  .well{
+    margin-top: 20px;
+  }
+
 }
