--- a/public/css/style_ad_show.css
+++ b/public/css/style_ad_show.css
@@ -7,6 +7,10 @@ img{
   height: 160px;
 }
 
+.txt{
+text-align: center;
+}
+
 a:link{
   text-decoration: none;
 }
@@ -51,12 +55,27 @@ a{
     margin-bottom: 20px;
   }
 }
-/** erro muito erro**/
 /**desktop**/
 @media screen and (min-width: 768px){
 h1{
   text-align:center;
-  background-color:aqua;
+}
+.img-pro{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.txt{
+text-align: center;
+}
+p{
+  font-size: 16px;
+}
+.style-color:hover{
+  text-decoration: underline;
+  color: rgb(25, 7, 55);
 }
 
 }
