ads index col-md-4 col-xs-12

--- a/public/css/style_ad_index.css
+++ b/public/css/style_ad_index.css
@@ -26,5 +26,12 @@ a{
 }
 /**desktop**/
 @media screen and (min-width: 769px){
-  
+  .texto{
+    white-space: nowrap;
+    width: 200px;
+    word-break: break-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+  }
 }
