--- a/public/css/style_user_show.css
+++ b/public/css/style_user_show.css
@@ -43,6 +43,11 @@ justify-content: center;
 .btn_messagem{
   text-decoration: none;
 }
+.edit-perfil{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 }
 
 /**tablet**/
@@ -67,7 +72,7 @@ width: 100%;
 }
 }
 /**desktop**/
-@media screen and (min-width: 771px){
+@media screen and (min-width: 769px){
   header, article{
 
   }
@@ -77,5 +82,5 @@ width: 100%;
   .well{
     margin-top: 20px;
   }
-  
+
 }
