--- a/public/css/style_user_show.css
+++ b/public/css/style_user_show.css
@@ -3,7 +3,6 @@ body{
 }
 
 #avatar{
-
   width: 150px;
   height: 150px;
 }
@@ -16,6 +15,9 @@ body{
   padding-bottom: 10px;
   text-decoration: none;
 
+}
+.well{
+  height: 120px;
 }
 /**SmartPhone**/
 @media screen and (max-width: 420px)  {
@@ -82,5 +84,6 @@ width: 100%;
   .well{
     margin-top: 20px;
   }
+
 
 }
